[package]
name = "math-plugin"
version = "0.1.0"
edition = "2021"

[lib]
name = "math_plugin"
crate-type = ["cdylib",'rlib']

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quick-search-lib = { git = "https://github.com/quick-search-rs/quick-search-lib" }
abi_stable = "0.11.3"
mexprp = { version = "0.3.1", default-features = false }
clipboard = "0.5.0"

[profile.release]
lto = true
codegen-units = 1
opt-level = "z" 
